--- a/styles/jewelry.css
+++ b/styles/jewelry.css
@@ -1,178 +1,17 @@
 
-/* main */
-#main_box_template{
-	margin:22px 0px 0px 0px;
-	background-color:#FFF;
-	width:auto;
-	height:auto;
-	min-height:200px;
-	border-left:1px solid #CCC;
-	border-right:1px solid #CCC;
-}
-#main_box{
-	margin:22px 0px 0px 0px;
-	background-color:#FFF;
-	width:auto;
-	height:1300px;
-	border-left:1px solid #CCC;
-	border-right:1px solid #CCC;
+article div {
+	width: 100%;
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: space-around;
 }
 
-#main_box_jewelry{
-	margin:22px 0px 0px 0px;
-	background-color:#FFF;
-	width:auto;
-	height:12260px;
-	border-left:1px solid #CCC;
-	border-right:1px solid #CCC;
+article div div {
+	width: 980px;
+	/*border: 1px solid #CCC;*/
 }
 
-#main_title{
-	border-top:1px solid #CCC;
-	border-bottom:1px solid #CCC;
-	background:#FFF;
-	height:68px;
-	display:block;
+article img {
+	width: 980px;
+	height: 767px;
 }
-#main_title_template{
-	display:none;
-}
-#main_text{
-	height:340px;
-	display:block;
-}
-#main_titletxt{
-	margin-top:8px;
-	font-size:42px;
-	text-align:center;
-	color:#ff9c00;
-	/*text-shadow:-2px 2px 3px #CCCCCC;*/
-	font-weight:100;
-}
-#main_texttxt{
-	line-height:24px;
-	text-align:justify;
-	padding:0px 25px 0px 25px;
-	margin:55px 130px 0px 130px;
-	color:#666;
-	border-left:1px solid #ffa270;
-	border-right:1px solid #ffa270;
-	font-weight:200;
-	font-size:17px;
-}
-#index_buffer{
-	margin-top:-130px;
-}
-#slider{
-	margin-top:0px;
-}
-#slider_title{
-	margin:120px 100px 5px 100px;
-	background-color:#FFF;
-	border-bottom:1px solid #CCC;
-	height:40px;
-	text-align:center;
-}
-#image_slider{
-	width:100%;
-	margin:-1px;
-	border: 1px solid #CCC;
-}
-#title_triangles{
-	display:none;
-	width:900px;
-	padding-left:50px;
-	margin-top:-1px;
-	position:static;
-}
-#slider_box{
-	margin:0px 75px 0px 75px;
-	background:#FFF;
-	height:200px;
-}
-#slider_titletxt{
-	font-size:26px;
-	color:#ff9c00;
-	font-weight:100;
-	padding-top:8px;
-}
-#slider_link_box{
-	margin-top:110px;
-}
-#slider_link{
-	border-top:1px solid #CCC;
-	border-bottom:1px solid #CCC;
-	text-align:center;
-	margin:auto;
-	height:50px;
-	width:500px;
-}
-#slider_link img{
-	display:none;
-	margin-right:0px;
-	float:right;
-	height:16px;
-}
-#slider_linktxt{
-	color:#ff9c00;
-}
-#slider_linktxt:hover{
-	color:#ffa270;
-}
-/*main end*/
-/*jewelry*/
-#image{
-	height:380px;
-	border-top:1px solid #CCC;
-	margin:-11px 0px 0px 0px;
-	padding-right:-20px;
-}
-#jewelry_image_smaller{
-	margin-left:-1px;
-}
-#jewelry_buttons{
-	margin:auto;
-	width:1000px;
-	height:86px;
-}
-#jewelry_view{
-	margin: 45px 0px 0px 190px;
-	float:left;
-	display:inline-block;
-	text-align:center;
-	width:620px;
-	height:60px;
-	border-top: 1px solid #CCC;
-	border-bottom: 1px solid #CCC;
-}
-#jewelry_viewtxt{
-	text-decoration:none;
-	color:#ff9c00;
-	font-weight:100;
-	font-size:22px;
-	margin-top:18px;
-}
-#jewelry_viewtxt:hover{
-	color:#ffa270;
-}
-#jewelry_buffer{
-	margin-top:-20px;
-}
-#jewelry_box{
-	width:1000px;
-	height:auto;
-	background-color:#FFF;
-}
-#jewelry_pages{
-	width:998px;
-	height:auto;
-	padding:50px 0px 0px 0px;
-	border-right:1px solid #CCC;
-}
-#jewelry_pages_actual{
-	display:inline;
-	width:980px;
-	/*border:1px solid #CCC;*/
-	margin:10px 0px 0px 10px;
-}
-/*jewelry end*/
