--- a/styles/index.css
+++ b/styles/index.css
@@ -1,5 +1,5 @@
 
-.slider{
+.slider {
 	margin-top: -50px;
 }
 
@@ -19,35 +19,27 @@
 
 .slider img {
 	width: 100%;
-	margin: -1px;
 	border: 1px solid #CCC;
 }
 
-.grid-block-container {
-	width: 180px;
-	height: 250px;
-}
-
 .grid-block {
-	position: relative;
 	width: 180px;
 	height: 250px;
-	border: 1px solid #ddd;
 }
 
 .caption {
-	display: none;
+/*	display: none;*/
+	margin: 0;
+	padding: 0;
+	width: 1px;
 	position: absolute;
+	
 	background-color: #FFF;
 	border-bottom: 1px solid #ddd;
-	width: 100%;
-	height: 32px;
-}
-
-.caption h3 {
 	font-weight: 100;
 	font-size: 16px;
 	color: #ff9c00;
 	text-align: center;
-	margin-top: 8px;
+	
+	background-color: green;
 }
