--- a/styles/index.css
+++ b/styles/index.css
@@ -17,29 +17,24 @@
 	justify-content: space-around;
 }
 
+.slider div div, .slider img, .slider h4 {
+	width: 14vw;
+	min-width: 140px;
+	max-width: 200px;
+}
+
 .slider img {
-	width: 100%;
 	border: 1px solid #CCC;
 }
 
-.grid-block {
-	width: 180px;
-	height: 250px;
-}
-
-.caption {
-/*	display: none;*/
-	margin: 0;
-	padding: 0;
-	width: 1px;
+.slider h4 {
+	display: none;
 	position: absolute;
-	
+	margin: 1px;
+	padding: 8px 0px;
 	background-color: #FFF;
 	border-bottom: 1px solid #ddd;
 	font-weight: 100;
 	font-size: 16px;
-	color: #ff9c00;
 	text-align: center;
-	
-	background-color: green;
 }
