Optimized image and file paths

--- a/styles/about.css
+++ b/styles/about.css
@@ -1,6 +1,6 @@
 
 .flexslider {
-	background-image: url(../images/about/main.jpg);
+	background-image: url(../img/about/main.jpg);
 }
 
 article img {
