--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,6 +1,6 @@
 
 .flexslider {
-	background-image: url(../images/contact/main.jpg);
+	background-image: url(../img/contact/main.jpg);
 }
 
 article > div {
