--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 
 html {
-	background-image: url(../images/OTBackground.jpg);
+	background-image: url(../img/src/bg/summer.jpg);
 	background-size: 40px;
 }
 
