--- a/styles/retail.css
+++ b/styles/retail.css
@@ -41,3 +41,18 @@ h6 {
 	font-weight: 500;
 	color: #CCC;
 }
+
+/* map */
+
+.map-title {
+	text-align: center;
+	color: #ff9c00;
+	font-weight: 100;
+	font-size: 16px;
+}
+
+.map-body {
+	font-size: 14px;
+	line-height: 25px;
+	color: #666;
+}
