--- a/styles/index.css
+++ b/styles/index.css
@@ -4,7 +4,7 @@
 }
 
 .slider h2 {
-	margin: 80px 100px 0px 100px;
+	margin: 60px 15% 0px 15%;
 	border-bottom: 1px solid #CCC;
 }
 
@@ -19,7 +19,6 @@
 
 .slider div div, .slider img, .slider h4 {
 	width: 14vw;
-	min-width: 120px;
 	max-width: 200px;
 }
 
@@ -37,4 +36,19 @@
 	font-weight: 100;
 	font-size: 16px;
 	text-align: center;
+}
+
+@media only screen and (max-width: 600px) {
+	.slider h2 {
+		margin: 30px 10% 0px 10%;
+	}
+
+	.slider div div, .slider img, .slider h4 {
+		width: 18vw;
+	}
+
+	.slider h4 {
+		font-size: 12px;
+		padding: 5px 0px;
+	}
 }
